# gemini

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConscript  SConstruct
Apps/Test/: SConscript
Apps/Test/Source/: TestGame.cpp  TestGame.h
Dependencies/: versions.txt
Dependencies/Linux/: SConscript
Dependencies/Win32/: SConscript
Dependencies/Win32/Bullet/Lib/: BulletCollision.lib  BulletDynamics.lib  (+2 more)
Development/: Orion.sublime-project
Development/SCons/: Util.py  VCS.py
Documentation/: License.md  Screenshots.md
Documentation/Templates/: Template.cpp  Template.h
Engine/: SConscript
Engine/Assets/Materials/: White.object
Engine/Assets/Meshes/: Cube.object  Plane.object
Engine/Assets/Techniques/: Basic.object  BasicTextured.object  PBRMetallicRoughness.object
Engine/Assets/Textures/: DefaultNormal.loader  DefaultNormal.tga  DummyBlack2D.tga  DummyBlackCube.loader  DummyWhite2D.tga
Engine/Runtime/Core/: Base64.cpp  Base64.h  Bitset.h  ByteArray.h  CoreDefs.h  DataStream.cpp  DataStream.h  Filesystem.h  Hash.h  HashTable.h  Intrusive.h  IntrusiveList.h  LinearAllocator.cpp  LinearAllocator.h  Log.cpp  Math.h  Path.cpp  Path.h  PixelFormat.cpp  PixelFormat.h  Platform.h  RefCounted.cpp  RefCounted.h  SConscript  Singleton.h  String.cpp  String.h  Thread.cpp  Thread.h  Time.h  Utility.h
Engine/Runtime/Engine/: Asset.cpp  Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  Behaviour.cpp  Behaviour.h  Component.cpp  Component.h  DebugManager.cpp  DebugManager.h  DebugWindow.cpp  DebugWindow.h  Engine.cpp  Engine.h  EngineSettings.cpp  EngineSettings.h  Entity.cpp  Entity.h  FrameAllocator.cpp  FrameAllocator.h  Game.h  ImGUI.cpp  ImGUI.h  JSONSerialiser.cpp  JSONSerialiser.h  Main.cpp  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Profiler.cpp  Profiler.h  SConscript  Serialiser.cpp  Serialiser.h  Texture.cpp  Texture.h  Window.cpp  (+3 more)
Engine/Runtime/Entity/: Behaviour.cpp  Behaviour.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityDefs.h  SConscript  World.cpp  World.h  WorldEditorWindow.cpp  WorldEditorWindow.h
Engine/Runtime/GPU/: GPUArgumentSet.cpp  GPUArgumentSet.h  GPUBuffer.cpp  GPUBuffer.h  GPUCommandList.cpp  GPUCommandList.h  GPUConstantPool.h  GPUContext.cpp  GPUContext.h  GPUDefs.cpp  GPUDefs.h  GPUDevice.cpp  GPUDevice.h  GPUDeviceChild.h  GPUObject.cpp  GPUObject.h  GPUPipeline.cpp  GPUPipeline.h  GPUQueryPool.cpp  GPUQueryPool.h  GPURenderPass.cpp  GPURenderPass.h  GPUResource.cpp  GPUResource.h  GPUResourceView.cpp  GPUResourceView.h  GPUSampler.h  GPUShader.cpp  GPUShader.h  GPUStagingResource.cpp  GPUStagingResource.h  GPUState.cpp  GPUState.h  GPUSwapchain.cpp  GPUSwapchain.h  GPUTexture.cpp  GPUTexture.h  GPUUniformPool.h  GPUUtils.cpp  GPUUtils.h  (+1 more)
Engine/Runtime/Input/: InputDefs.h  InputEvent.h  InputHandler.cpp  InputHandler.h  InputInfo.cpp  InputInfo.h  InputManager.cpp  InputManager.h  SConscript
Engine/Runtime/Loaders/: GLTFImporter.cpp  GLTFImporter.h  OBJLoader.cpp  OBJLoader.h  SConscript  STBLoader.cpp  STBLoader.h  TGALoader.cpp  TGALoader.h  TextureLoader.cpp  TextureLoader.h
Engine/Runtime/Physics/: CollisionShape.cpp  CollisionShape.h  PhysicsInternal.h  PhysicsMaterial.cpp  PhysicsMaterial.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h  SConscript
Engine/Runtime/Render/: BasicRenderPipeline.cpp  BasicRenderPipeline.h  Camera.cpp  Camera.h  DeferredRenderPipeline.cpp  DeferredRenderPipeline.h  EntityDrawList.cpp  EntityDrawList.h  EntityRenderer.cpp  EntityRenderer.h  FXAAPass.cpp  FXAAPass.h  Light.cpp  Light.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  RenderContext.cpp  RenderContext.h  RenderDefs.cpp  RenderDefs.h  RenderEntity.cpp  RenderEntity.h  RenderGraph.cpp  RenderGraph.h  RenderLayer.cpp  RenderLayer.h  RenderLight.cpp  RenderLight.h  RenderManager.cpp  RenderManager.h  RenderOutput.cpp  RenderOutput.h  RenderPipeline.cpp  RenderPipeline.h  RenderView.cpp  RenderView.h  RenderWorld.cpp  RenderWorld.h  (+15 more)
Engine/Shaders/: Basic.hlsl  BasicRenderPipeline.hlsl  BasicTextured.hlsl  DebugPrimitive.h  DebugPrimitive.hlsl  Deferred.h  DeferredCulling.hlsl  DeferredCullingDebug.hlsl  DeferredDefs.h  DeferredLighting.hlsl  DeferredShadowMask.hlsl  FXAA.h  FXAA.hlsl  FullScreen.h  FullScreen.hlsl  ImGUI.h  ImGUI.hlsl  ImGui.hlsl  ImGui.vert  ImGuiFrag.glsl  Lighting.h  LightingDefs.h  PBR.hlsl  ShaderDefs.h  ShadowMap.h  ShadowMap.hlsl  Skybox.hlsl  TestVert.glsl  Tonemap.h  Tonemap.hlsl
Engine/Tools/: SConscript
Engine/Tools/ObjectGen/: ObjectGen.cpp  ObjectGen.mustache  SConscript
Games/: SConscript
Games/MTRenderTest/: SConscript
Games/MTRenderTest/Shaders/: Test.hlsl
Games/MTRenderTest/Source/: MTRenderTestGame.cpp  MTRenderTestGame.h
Games/Test/: SConscript
Games/Test/Shaders/: Test.frag  Test.hlsl  Test.vert
Games/Test/Source/: PlayerController.cpp  PlayerController.h  TestGame.cpp  TestGame.h
(+275 files in other folders)
